Changed <script ...> to <script>

--- a/clash_js.html
+++ b/clash_js.html
@@ -527,7 +527,7 @@
       </div>
     </div>
 
-  </div> <script type="module">
+  </div> <script>
     // We will put ALL logic inside window.onload
     // to ensure every single element is ready.
     window.onload = function() {
