--- a/clash_js.html
+++ b/clash_js.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Clash JS</title>
+<title>AI Clash</title>
 <style>
     /* --- NEW Main Menu Styles --- */
     body {
@@ -456,7 +456,7 @@
 
   <div id="app-container">
     <div id="main-menu-page">
-      <h1>Clash JS</h1>
+      <h1>AI Clash</h1>
       <button id="main-menu-play-button" class="main-menu-button">Play</button>
       <button id="main-menu-deck-button" class="main-menu-button">Deck</button>
     </div>
@@ -469,7 +469,7 @@
       <div id="game-container">
         <div id="game-menu">
           <div class="menu-content">
-            <h1>Clash JS</h1>
+            <h1>AI Clash</h1>
             <p>Defeat the enemy King to win!</p>
             <button id="play-button">Play</button>
           </div>
@@ -599,7 +599,7 @@
           range: 100,
           targetType: 'any',
           attackType: 'airAndGround',
-          count: 1,
+          count: 2,
           isFlying: false,
         },
         Giant: {
@@ -655,7 +655,7 @@
           range: 10,
           targetType: 'any',
           attackType: 'ground',
-          count: 1,
+          count: 4,
           isFlying: false,
         },
         Valkyrie: {
