--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+  <link rel="stylesheet" href="aMessage.css">
+</head>
 <body>
   <form autocomplete="off">
     <h1>
