new window for login

--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="aMessage.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <form autocomplete="off">
-    <h1>
-      LOGIN
-    </h1>
-    <label id="username_label" for="username">Username</label>
-    <input type="text" id="username_input" name="username" autoFocus>
-    <label id="password_label" for="password">Password</label>
-    <input type="text" id="password_input" name="password" autoFocus>
-    <button class="submit_button" type="submit"> LOGIN </button>
-  </form>
+  <button onclick="login()">Login</button>
+  <script>
+    function login() {
+      window.open("https://frostytoast37.github.io/aMessage/login", "_blank","fullscreen=no,menubar=yes,height=400,width=200" )
+    }
+  </script>
 </body>
