random css shit

--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="aMessage.css">
+  <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -9,9 +9,9 @@
       LOGIN
     </h1>
     <label id="username_label" for="username">Username</label>
-    <input type="text" id="username_input" name="username" autoFocus>
+    <input type="text" id="username_input" name="username" placeholder="Your Username" autofocus>
     <label id="password_label" for="password">Password</label>
-    <input type="text" id="password_input" name="password" autoFocus>
+    <input type="text" id="password_input" name="password" placeholder="Your Password" autofocus>
     <button class="submit_button" type="submit"> LOGIN </button>
   </form>
 </body>
