--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <form autocomplete="off" method="get">
+  <form id="login_form" autocomplete="off" method="post">
     <h1>
       LOGIN
     </h1>
