I wonder if this will work.... doubt it

--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -12,6 +12,7 @@
     <input type="text" id="username_input" name="username" placeholder="Your Username" autofocus>
     <label id="password_label" for="password">Password</label>
     <input type="text" id="password_input" name="password" placeholder="Your Password" autofocus>
+    <div id="output_div"></div>
     <button class="submit_button" type="submit"> LOGIN </button>
   </form>
 </body>
