--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -11,7 +11,7 @@
     <label id="username_label" for="username">Username</label>
     <input type="text" id="username_input" name="username" placeholder="Your Username" autofocus>
     <label id="password_label" for="password">Password</label>
-    <input type="text" id="password_input" name="password" placeholder="Your Password" autofocus>
+    <input type="password" id="password_input" name="password" placeholder="Your Password" autofocus>
     <div id="output_div"></div>
     <button class="submit_button" type="submit"> LOGIN </button>
   </form>
