starting node.js integration

--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -15,4 +15,5 @@
     <div id="output_div"></div>
     <button class="submit_button" type="submit"> LOGIN </button>
   </form>
+  <script src="OLDaMessage.js"></script>
 </body>
