maybe fixed server compatibility and add express

--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -9,4 +9,5 @@
       window.open("https://frostytoast37.github.io/aMessage/login", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
     }
   </script>
+  <p>updated?</p>
 </body>
