--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -6,7 +6,13 @@
   <button onclick="login()">Login</button>
   <script>
     function login() {
-      window.open("https://frostytoast37.github.io/aMessage/login", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
+      window.open("https://frostytoast37.cookiechaos.xyz/aMessage/login.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
+    }
+  </script>
+  <button onclick="signUp()">Login</button>
+  <script>
+    function login() {
+      window.open("https://frostytoast37.cookiechaos.xyz/aMessage/sign-up.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
     }
   </script>
   <p>updated?</p>
