signup button text: login => sign up

--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -9,7 +9,7 @@
       window.open("https://frostytoast37.cookiechaos.xyz/aMessage/login.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
     }
   </script>
-  <button onclick="signUp()">Login</button>
+  <button onclick="signUp()">Sign Up</button>
   <script>
     function login() {
       window.open("https://frostytoast37.cookiechaos.xyz/aMessage/sign-up.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
