fixing 405 due to url mismatch

--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -11,7 +11,7 @@
   </script>
   <button onclick="signUp()">Sign Up</button>
   <script>
-    function login() {
+    function signUp() {
       window.open("https://frostytoast37.cookiechaos.xyz/aMessage/sign-up.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
     }
   </script>
