--- a/aMessage/sign-up.html
+++ b/aMessage/sign-up.html
@@ -6,7 +6,7 @@
 <body>
   <form id="sign_up_form" autocomplete="off" method="post">
     <h1>
-      LOGIN
+      Sign Up
     </h1>
     <label id="username_label" for="username">Username</label>
     <input type="text" id="username_input" name="username" placeholder="Your Username" autofocus>
