--- a/aMessage/index.html
+++ b/aMessage/index.html
@@ -15,5 +15,5 @@
       window.open("https://frostytoast37.cookiechaos.xyz/aMessage/sign-up.html", "_blank","fullscreen=no,menubar=yes,height=300,width=400" )
     }
   </script>
-  <p>aw fooey</p>
+  <p>aw fooey pt. 2</p>
 </body>
