working on login page

--- a/aMessage/login.html
+++ b/aMessage/login.html
@@ -15,5 +15,5 @@
     <div id="output_div"></div>
     <button class="submit_button" type="submit"> LOGIN </button>
   </form>
-  <script src="OLDaMessage.js"></script>
+  <script src="client-login.js"></script>
 </body>
